# calendate

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/calendate/: auth.py  config.py  db.py  main.py  utils.py
src/calendate/routers/: auth.py  booking.py  dashboard.py  profile.py  requests.py  slots.py
src/calendate/services/: calendar.py
src/calendate/templates/: base.html  booking.html  dashboard.html  landing.html  login.html  settings.html  signup.html
src/calendate/templates/partials/: _booking_day.html  _dashboard_body.html  _dashboard_wrapper.html  _request_detail.html  calendar.html  request_card.html
