[project]
name = "calendate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "stripe>=15.2.1",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
